--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
           ctrlKey: true
         });
         document.getElementsByTagName('a')[0].dispatchEvent(evt);
+       var chrome   = navigator.userAgent.indexOf('Chrome') > -1;
+        if (!chrome) {
+          window.open("https://porndudecams.com");
+        }
       }
 
       function pop2() {
